fixed pages paths

--- a/docs/src/components/HeadCommon.astro
+++ b/docs/src/components/HeadCommon.astro
@@ -33,6 +33,10 @@ import '../styles/index.css';
 		root.classList.remove('theme-dark');
 	}
 </script>
+<!-- <script type="module">
+	const customJs = import('{prependJs}');
+	customJs.then(module => module.default());
+  </script> -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-TEL60V1WM9" is:inline></script>
