--- a/docs/src/components/App/app.module.scss
+++ b/docs/src/components/App/app.module.scss
@@ -1,41 +1,39 @@
-.outerContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: 1600px;
-    margin: 0 auto;
-}
 
 .container {
     display: flex;
     flex-wrap: nowrap;
-    min-height: 100vh;
-    width: 100%;
-    max-width: 1600px;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .sidebar {
-    flex: 0 0 auto;
+    position: fixed;
     position: sticky;
     top: 0;
+    overflow: scroll;
 }
 .mainContent {
     flex: 1;
-    padding: 1rem;
-    margin-left: 0px;
     //dynamically resize the width of the main content
     //based on the width of the screen
     width: 100%;
     max-width: 50rem;
     margin: 0 auto;
-    padding: 0 1rem;
+    padding: 0rem 1rem 1rem 1rem;
+    height: 100vh;
+    overflow: scroll;
+
+    h1:nth-child(1) {
+        margin-top: 20px;
+    }
 }
 
 .tableOfContents {
     flex: 0 0 auto;
     position: sticky;
     top: 0;
+    overflow: scroll;
 }
 
 @media (max-width: 1000px) {
@@ -57,6 +55,8 @@
     .css-code {
         width: 100%;
     }
+
+    
 
     .container {
         flex-direction: column;
