--- a/docs/src/components/Header/header.module.scss
+++ b/docs/src/components/Header/header.module.scss
@@ -1,36 +1,30 @@
 @import '/src/_variables.scss';
 
 .header {
-    width: 100%;
-    background-color: $--background-color;
-    // padding: 1rem;
-    // box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    display: flex;
-    align-items: center;
-    height: $--header-height;
+  width: 100%;
+  display: flex;
+  align-items: center;
 
-    .logoContainer {
-        display: flex;
-        align-items: center;
-        
-        margin-left: 1rem;
-
-        .logo {
-            display: block;
-            width: auto;
-            height: 30px;
-        }
-    }
-}
-.title {
-    cursor: pointer;
-
-    width: 100%;
-    background-color: $--background-color;
+  .logoContainer {
     display: flex;
     flex-direction: column;
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin: 0;
+    align-items: flex-start;
+    margin-bottom: 2rem;
+
+    .logo {
+      display: block;
+      width: auto;
+      height: 30px;
+    }
   }
-  
+}
+.title {
+  cursor: pointer;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #333;
+  margin: 10px 0 0 0;
+}
