--- a/docs/src/components/TableOfContents/TableOfContents.module.scss
+++ b/docs/src/components/TableOfContents/TableOfContents.module.scss
@@ -1,7 +1,7 @@
 @import '/src/_variables.scss';
 
 .tableOfContents {
-    height: calc(100vh - $--header-height);
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -18,7 +18,7 @@
         flex-direction: column;
         align-items: flex-start;
         width: 100%;
-        margin-left: 1rem;
+        
 
         ul {
             list-style-type: none;
@@ -26,7 +26,7 @@
             margin: 0;
 
             li {
-                margin-bottom: 1rem;
+                // margin-bottom: 1rem;
 
                 a {
                     text-decoration: none;
