--- a/docs/src/styles/prismjs-theme.scss
+++ b/docs/src/styles/prismjs-theme.scss
@@ -6,7 +6,7 @@
 
  code[class*="language-"],
  pre[class*="language-"] {
-	border-radius: 0;
+	border-radius: 5px;
 	 color: #c5c8c6;
 	 font-size: 10pt;
 	 text-shadow: none;
@@ -28,6 +28,25 @@
 	 hyphens: none;
  }
  
+a {
+	margin-right: 0;
+	text-decoration: none;
+	
+}
+
+h3 a, h2 a {
+	font-weight: 300;
+	color: black;
+
+	&:hover{
+		color: #1351ce
+	}
+}
+
+h1 {
+	margin-top: 60px;
+}
+
  /* Code blocks */
  pre[class*="language-"] {
 	 padding: 1em;
