fix toc header width

--- a/docs/src/components/TableOfContents/TableOfContents.module.scss
+++ b/docs/src/components/TableOfContents/TableOfContents.module.scss
@@ -50,7 +50,7 @@
 
 .header {
 
-    width: 100%;
+    // width: 100%;
     background-color: $--background-color;
     display: flex;
     flex-direction: column;
