--- a/docs/src/root.module.scss
+++ b/docs/src/root.module.scss
@@ -1,9 +1,9 @@
 @import '/src/_variables.scss';
 
 body {
-  font-family: 'Cera Pro', sans-serif;
-  font-size: 1rem;
-  line-height: 1.5;
+  font-family: 'Open sans', sans-serif;
+  font-size: 15px;
+  line-height: 24px !important;
   color: #1f3349;
   margin: 0px;
   
@@ -11,6 +11,10 @@ body {
   
 }
 
+p {
+  margin: 0 !important;
+  font-weight: 400 !important;
+}
 a {
   margin-right: 1rem;
 
@@ -33,6 +37,13 @@ h2 {
   padding-top: 30px;
   margin: 36px 0 18px;
   font-family: 'Open Sans',sans-serif;
+}
+
+h3 {
+  font-family: 'Menlo','Bitstream Vera Sans Mono','Monaco','Consolas',monospace;
+  font-size: 18px;
+  margin-bottom: 0;
+
 }
 
 p {
