--- a/docs/src/components/MainContent/maincontent.module.scss
+++ b/docs/src/components/MainContent/maincontent.module.scss
@@ -6,26 +6,39 @@
   box-sizing: border-box;
   overflow: scroll;
 
+
+  
+
   .mainContent_paddingContainer {
+    
     position: relative;
     padding: 1rem 1rem 2rem 1rem;
     overflow: scroll;
     box-sizing: border-box;
-
+    
     .row {
       display: flex;
       box-sizing: border-box;
 
       .docItems {
+        
         flex: 1 0;
         margin-left: 0;
         padding: 0 1rem;
         width: 100%;    
         
 
+        h1, h2, h3 {
+          padding-top: calc(3.75rem * 1  + 30px);
+          margin-top: calc(3.75rem * (-1) + 36px);
+        }
+
         h1:nth-child(1) {
             margin-top: 0px;
+            padding-top: 0px;
         }
+
+        
 
       }
 
