--- a/docs/src/root.module.scss
+++ b/docs/src/root.module.scss
@@ -35,8 +35,8 @@ h1 {
 h2 {
   font-weight: 400!important;
   font-size: 30px;
-  border-top: 1px solid!important;
-  border-color: #d6dee8!important;
+  // border-top: 1px solid!important;
+  // border-color: #d6dee8!important;
   padding-top: 30px;
   margin: 36px 0 18px;
   font-family: 'Open Sans',sans-serif;
