--- a/docs/src/root.module.scss
+++ b/docs/src/root.module.scss
@@ -42,11 +42,22 @@ h2 {
   font-family: 'Open Sans',sans-serif;
 }
 
+
+
 h3 {
   font-family: 'Menlo','Bitstream Vera Sans Mono','Monaco','Consolas',monospace;
   font-size: 18px;
   margin-bottom: 0;
+}
+          
+a.anchor_H3 {
+  padding-left: 40px !important;
+}
 
+h4 {
+  font-family: 'Menlo','Bitstream Vera Sans Mono','Monaco','Consolas',monospace;
+  font-size: 18px;
+  margin-bottom: 0;
 }
 
 p {
