--- a/docs/src/styles/prismjs-theme.scss
+++ b/docs/src/styles/prismjs-theme.scss
@@ -62,9 +62,9 @@ h3 a, h2 a {
 	}
 }
 
-h1 {
-	margin-top: 60px;
-}
+// h1 {
+// 	margin-top: 60px;
+// }
 
  /* Code blocks */
  pre[class*="language-"] {
