--- a/docs/src/components/Sidebar/sidebar.module.scss
+++ b/docs/src/components/Sidebar/sidebar.module.scss
@@ -9,7 +9,7 @@
   // top: 0;
   border: 1px solid rgb(236, 242, 247);
   background-color: white;
-  margin-top: calc(3.75rem *-1);
+  margin-top: calc(3.75rem * -1);
 
   .sidebar_viewport {
     position: sticky;
@@ -17,11 +17,9 @@
     height: 100%;
     max-height: 100vh;
     box-sizing: border-box;
-    
-    
   }
-  
-  .sidebar_inner_container{
+
+  .sidebar_inner_container {
     display: flex;
     width: 200px; // Adjust this value according to your preference
     padding-top: 60px;
@@ -33,10 +31,9 @@
   // flex-direction: column;
   // align-items: center;
 
-  // 
+  //
   // // box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   // flex: 0 0 auto;
-  
 
   .navItems {
     padding: 1rem;
@@ -51,20 +48,35 @@
       margin: 0;
 
       li {
+        // a {
+        //   text-decoration: none;
+        //   color: #333;
+        //   font-weight: 500;
+        //   font-size: 1rem; // Increase font size for better readability
+        //   line-height: 1.4; // Improve line spacing
+        //   padding: 6px 0px; // Add padding around the link
+        //   border-radius: 4px; // Add border radius to the link
+        //   display: block; // Make the link a block element
+
+        //   &:hover {
+        //     color: #007bff;
+        //     // color: #007BFF;
+        //     //background-color: #f6f6ff;
+        //   }
+
         a {
           text-decoration: none;
           color: #333;
           font-weight: 500;
-          font-size: 1rem; // Increase font size for better readability
-          line-height: 1.4; // Improve line spacing
-          padding: 6px 0px; // Add padding around the link
-          border-radius: 4px; // Add border radius to the link
-          display: block; // Make the link a block element
+          font-size: 0.9rem;
+          line-height: 1.4;
+          padding: 6px 12px;
+          border-radius: 4px;
+          display: block;
 
           &:hover {
             color: #007bff;
-            // color: #007BFF;
-            //background-color: #f6f6ff;
+            background-color: #f0f0f0;
           }
         }
       }
