--- a/docs/src/components/MainContent/maincontent.module.scss
+++ b/docs/src/components/MainContent/maincontent.module.scss
@@ -1,3 +1,34 @@
+@media (min-width: 1050px) {
+  .toc_accordion {
+    display: none;
+  }
+
+
+}
+
+.toc_accordion {
+  border: 1px solid rgb(229, 229, 229);
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.scrollToTop {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 30;
+  background-color: white;
+  border: 1px solid grey;
+  cursor: pointer;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+
 .mainContentContainer {
   flex-grow: 1;
   
@@ -14,7 +45,7 @@
     max-width: 800px;
     
     position: relative;
-    padding: 1rem 1rem 2rem 1rem;
+    padding: 1rem 1rem 5rem 1rem;
     overflow: hidden;
     box-sizing: border-box;
     
