fix edit on github button

--- a/docs/src/components/MainContent/maincontent.module.scss
+++ b/docs/src/components/MainContent/maincontent.module.scss
@@ -3,7 +3,6 @@
     display: none;
   }
 
-
 }
 
 .toc_accordion {
@@ -73,4 +72,14 @@
 
     }
   }
+}
+
+
+.githubLink {
+  text-align: center;
+  width: 100%;
+  display: block;
+  margin: 20px auto 0 auto;
+  font-size: 16px;
+  color: black;
 }
