--- a/docs/src/components/Header/header.module.scss
+++ b/docs/src/components/Header/header.module.scss
@@ -53,7 +53,7 @@
 .title {
   cursor: pointer;
   width: 250px;
-  font-size: 1.2rem;
-  font-weight: bold;
+  font-size: 1.7rem;
+  font-weight: 400;
   color: #333;
 }
