Add scrollHandler for right side nav

--- a/docs/src/components/toc/toc.module.scss
+++ b/docs/src/components/toc/toc.module.scss
@@ -8,6 +8,10 @@
   margin-top: -3.75rem;
 }
 
+.active {
+  color: #007bff !important;
+}
+
 @media (max-width: 1050px) {
   .largeTOC {
     display: none;
