--- a/docs/src/components/sdk-support-table/sdk-support-table.module.scss
+++ b/docs/src/components/sdk-support-table/sdk-support-table.module.scss
@@ -8,12 +8,14 @@
     margin: 0;
   }
 
-  th, tr {
+  th,
+  tr {
     height: 42px;
   }
 
-  table, th, td {
-    // border-collapse: collapse;
+  table,
+  th,
+  td {
     border: 1px solid rgb(204, 204, 204);
     padding: 0 10px;
     text-align: left;
