--- a/docs/src/components/collapse/collapse.scss
+++ b/docs/src/components/collapse/collapse.scss
@@ -11,8 +11,8 @@
   width: 100%;
   padding: 14px;
   font-weight: 600;
-  background-color: rgb(250, 250, 250);
-  border: 1px solid hsl(240 5% 84%);
+  background-color: white;
+  border: 1px solid hsl(0, 0%, 86%);
   color: hsl(240 4% 16%);
   text-align: left;
   outline: none;
@@ -33,7 +33,7 @@
 .collapsible__content {
   width: 100%;
   overflow: hidden;
-  border: 1px solid hsl(240 5% 84%);
+  border: 1px solid hsl(0, 0%, 86%);
   border-top: none;
   color: hsl(240 4% 16%);
   // animation: slideUp 300ms ease-out;
